[package]
name = "dsa_sport"
version = "0.1.0"
authors = ["Kiran Kumar Roy <kkroy22@gmail.com>"]
edition = "2018"
description = "crate of revision material for undergrads"
license = "MIT OR GPL-3.0 OR BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
